--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 							<li>
 								<div class="list_inner">
 									<img class="svg" src="img/svg/social/dribbble.svg" alt="" />
-									<p><span class="first">Website:</span><span class="second"><a href="https://gyanasaireddy.github.io/portofolio/">Gyana Sai Reddy</a></span></p>
+									<p><span class="first">Email:</span><span class="second">gjnanasaireddy.freelance@gmail.com</span></p>
 								</div>
 							</li>
 			
