--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="container">
 				<div class="details" data-animation="toTop"> <!-- Animation Values: toTop, toRight, scale, rotate -->
 					<h3 class="fn_animation name">Gjnana Sai</h3>
-					<span class="fn_animation job">Expert | Video Editor & Graphic Designer</span>
+					<span class="fn_animation job">Video Editor & Graphic Designer</span>
 				</div>
 				<div class="grax_tm_down" data-skin="light">
 					<div class="line_wrapper">
@@ -217,7 +217,7 @@
 							</ul>
 						</div>
 						<div class="grax_tm_button">
-							<a href="https://gyanasaireddy.github.io/portofolio/Resume/index.html" target="_blank" >View My CV</a>
+							<a href="https://www.upwork.com/freelancers/~0128828120bbb4109f" target="_blank" >Upwork Profile</a>
 						</div>
 					</div>
 				</div>
@@ -379,10 +379,8 @@
 				<h3>Get in <span>Touch</span></h3>
 			</div>
 			<div class="contact_inner">
-				<div class="left wow fadeInLeft" data-wow-duration="1s">
-					<div class="text">
-						<p>Please fill out the form on this section to contact me.</p>
-					</div>
+				<div class="wow fadeInLeft" data-wow-duration="1s">
+				
 					<div class="info_list">
 						<ul>
 							<li>
@@ -414,33 +412,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="right wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">
-					<div class="fields">
-						<form action="/" method="post" class="contact_form" id="contact_form">
-							<div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
-							<div class="empty_notice"><span>Please Fill Required Fields</span></div>
-							<div class="first">
-								<ul>
-									<li>
-										<input id="name" type="text" placeholder="Name">
-									</li>
-									<li>
-										<input id="email" type="text" placeholder="Email">
-									</li>
-								</ul>
-							</div>
-							<div class="last">
-								<textarea id="message" placeholder="Message"></textarea>
-							</div>
-							<div class="grax_tm_button">
-								<a id="send_message" href="#">Send Message</a>
-							</div>
-
-							<!-- If you want to change mail address to yours, please open modal.php and go to line 4 -->
-
-						</form>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
