--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
       </div> -->
       
       <div class="grax_tm_section" id="portfolio" style="padding: 3rem 1.5rem; margin-top: 3rem; background-color: #111111;">
-  <div class="grax_tm_portfolio">
-    <div class="portofolio-container">
+  <div class="grax_tm_portfolio" style="margin-top: 2em; margin-bottom: 2em;">
+    <div class="portofolio-container" >
       <div class="grax_tm_title_holder">
         <h3>Selected <span>Projects</span></h3>
       </div>
@@ -479,13 +479,13 @@
 
         <!-- Card 4 -->
         <div class="project-card">
-          <img src="https://images.pexels.com/photos/32990121/pexels-photo-32990121.jpeg" alt="Book Notes App" />
+          <img src="./img/placeholders/Book Project.jpeg" alt="Book Notes App" />
           <div class="card-body">
             <h4>Book Notes</h4>
             <p>PostgreSQL • Google Books API</p>
             <div class="project-links">
               <a href="https://github.com/gyanasaireddy/Book-Project.git" target="_blank">GitHub</a>
-              <a href="#" target="_blank">Live Demo</a>
+              <a href="https://book-project-w6rv.onrender.com" target="_blank">Live Demo</a>
             </div>
           </div>
         </div>
@@ -615,7 +615,7 @@
                       <p>
                         <span class="first">Phone:</span
                         ><span class="second"
-                         id ="phoneNum" ><a href="javascript:void(0)">+91 824 722 4264  <img src="/img/placeholders/copy.png" style="filter: invert(1); width: 10px; margin-right: 5px; "/></a></span
+                         id ="phoneNum" ><a href="javascript:void(0)">+91 824 722 4264  <img src="./img/placeholders/copy.png" style="filter: invert(1); width: 10px; margin-right: 5px; "/></a></span
                         >
                       </p>
                     </div>
@@ -632,12 +632,13 @@
                         <span class="first">Email:</span
                         ><span class="second"
                          id ="emailid" >
-                          <a href="javascript:void(0)" >gjnanasaireddy@gmail.com <img src="/img/placeholders/copy.png" style="filter: invert(1); width: 10px; margin-right: 5px; "  alt=""></a></span
-                        >
+                          <a href="javascript:void(0)" >gjnanasaireddy@gmail.com  <img src="./img/placeholders/copy.png" style="filter: invert(1); width: 10px; margin-right: 5px; "/>
+
+
+                          </a></span >
                       </p>
                     </div>
                   </li>
-
                   <!-- <li>
 								<div class="list_inner">
 									<img class="svg" src="img/svg/social/facebook.svg" alt="" />
@@ -663,7 +664,7 @@
       <!-- /CONTACT -->
 
       <!-- COPYRIGHT -->
-      <div class="grax_tm_section">
+      <div class="grax_tm_section" style="padding: 0;">
         <div class="grax_tm_copyright">
           <div class="my_wave">
             <svg
