Final fixes as of now

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <ul>
                   <li>
                     <div class="list_inner">
-                      <img class="svg" src="img/svg/location.svg" alt="" />
+                      <img class="svg" src="img/svg/location.svg" alt="" style="filter: invert();"/>
                       <p>
                         <span class="first">Address:</span
                         ><span class="second">Hyderabad, India</span>
@@ -611,7 +611,7 @@
 
                   <li>
                     <div class="list_inner">
-                      <img class="svg" src="img/svg/phone.svg" alt="" />
+                      <img class="svg" src="img/svg/phone.svg" alt=""  style="filter: invert();"/>
                       <p>
                         <span class="first">Phone:</span
                         ><span class="second"
