--- a/index.html
+++ b/index.html
@@ -527,17 +527,16 @@
                 <div class="progress_inner" data-value="100">
                   <span
                     ><span class="label" style="width: 75vw;">Node.js Developer Course, Udemy</span
-                    ><span class="number">100%</span></span
-                  >
+                    >
+                    
                   <div class="background">
                     <div class="bar"><div class="bar_in"></div></div>
                   </div>
                 </div>
                 <div class="progress_inner" data-value="100">
                   <span
-                    ><span class="label">Full-Stack Web Development,, Udemy</span
-                    ><span class="number">100%</span></span
-                  >
+                    ><span class="label">Full-Stack Web Development, Udemy</span
+                    >
                   <div class="background">
                     <div class="bar"><div class="bar_in"></div></div>
                   </div>
@@ -545,8 +544,9 @@
                 <div class="progress_inner" data-value="45">
                   <span
                     ><span class="label">Full Stack Open, University of Helsinki</span
-                    ><span class="number">45%</span></span
-                  >
+                    >
+                    <!-- <span class="number">45%</span></span
+                  > -->
                   <div class="background">
                     <div class="bar"><div class="bar_in"></div></div>
                   </div>
@@ -554,7 +554,7 @@
                  <div class="progress_inner" data-value="25">
                   <span
                     ><span class="label">CS50’s Introduction to Computer Science</span
-                    ><span class="number">25%</span></span
+                    ></span
                   >
                   <div class="background">
                     <div class="bar"><div class="bar_in"></div></div>
