ADDED LINKS TO RESTRAUNT PROJECT

--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
             <h4>Restaurant Website</h4>
             <p>React • Google Firebase</p>
             <div class="project-links">
-              <a href="https://github.com/gyanasaireddy/Keeper-Project.git" target="_blank">GitHub</a>
-              <a href="#" target="_blank">Live Demo</a>
+              <a href="https://github.com/gyanasaireddy/RestrauntAPP_Frontend/tree/main/r_client" target="_blank">GitHub</a>
+              <a href="https://restraunt-app-tau.vercel.app/" target="_blank">Live Demo</a>
             </div>
           </div>
         </div>
