added keeper project

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       <div class="project-grid">
         <!-- Card 1 -->
         <div class="project-card">
-          <img src="./img/placeholders/Keeper app.jpeg" alt="Keeper Notes App" />
+          <img src="./img/placeholders/Keeper.jpeg" alt="Keeper Notes App" />
           <div class="card-body">
             <h4>Keeper Notes</h4>
             <p>ReactJS • Google Keep Clone </p>
